plugins/kotlin/idea/tests/testData/highlighterMetaInfo/TopLevelDestructuring.kt.highlighting
// IGNORE_FIR

val <!HIGHLIGHTING("severity='ERROR'; descr='Destructuring declarations are only allowed for local variables/values'; textAttributesKey='null'")!>(a, b)<!> <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_KEYWORD'")!>by<!> <!HIGHLIGHTING("severity='ERROR'; descr='[DEBUG] Reference is not resolved to anything, but is not marked unresolved'; textAttributesKey='KOTLIN_DEBUG_INFO'")!>lazy<!> { <!HIGHLIGHTING("severity='ERROR'; descr='[DEBUG] Reference is not resolved to anything, but is not marked unresolved'; textAttributesKey='KOTLIN_DEBUG_INFO'")!>Pair<!>(1, 2) }
val <!HIGHLIGHTING("severity='ERROR'; descr='Destructuring declarations are only allowed for local variables/values'; textAttributesKey='null'")!>(c, d)<!> = <!HIGHLIGHTING("severity='ERROR'; descr='[DEBUG] Reference is not resolved to anything, but is not marked unresolved'; textAttributesKey='KOTLIN_DEBUG_INFO'")!>run<!> { <!HIGHLIGHTING("severity='ERROR'; descr='[DEBUG] Reference is not resolved to anything, but is not marked unresolved'; textAttributesKey='KOTLIN_DEBUG_INFO'")!>Pair<!>(3, 4) }


class Foo {
    val <!HIGHLIGHTING("severity='ERROR'; descr='Destructuring declarations are only allowed for local variables/values'; textAttributesKey='null'")!>(a, b)<!> <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_KEYWORD'")!>by<!> <!HIGHLIGHTING("severity='ERROR'; descr='[DEBUG] Reference is not resolved to anything, but is not marked unresolved'; textAttributesKey='KOTLIN_DEBUG_INFO'")!>lazy<!> { <!HIGHLIGHTING("severity='ERROR'; descr='[DEBUG] Reference is not resolved to anything, but is not marked unresolved'; textAttributesKey='KOTLIN_DEBUG_INFO'")!>Pair<!>(1, 2) }
    val <!HIGHLIGHTING("severity='ERROR'; descr='Destructuring declarations are only allowed for local variables/values'; textAttributesKey='null'")!>(c, d)<!> = <!HIGHLIGHTING("severity='ERROR'; descr='[DEBUG] Reference is not resolved to anything, but is not marked unresolved'; textAttributesKey='KOTLIN_DEBUG_INFO'")!>run<!> { <!HIGHLIGHTING("severity='ERROR'; descr='[DEBUG] Reference is not resolved to anything, but is not marked unresolved'; textAttributesKey='KOTLIN_DEBUG_INFO'")!>Pair<!>(3, 4) }
}
